Resolves: tdf#105061 Only one text box shown in case of 'between'

non-layout ScCondFormatList widget not responding to layout child change

Change-Id: I7edd4fc54de9e71fb86b47a9b182bfc22fa4af25